--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@
                   <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
                </div>
                <div class="modal-body">
-                  <p>Oops! Something went wrong, please try again.</p>
+                  <p>Oops!! Something went wrong, please try again.</p>
                </div>
                <div class="modal-footer">
                   <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
