social media links Update index.html

--- a/index.html
+++ b/index.html
@@ -271,19 +271,19 @@
                         <a href="assets/Raifel TS 2024 CV-1.pdf" class="btn tj-btn-secondary">Download CV <i class="flaticon-download"></i></a>
                         <ul class="ul-reset social-icons">
                            <li>
-                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="https://x.com/TsRaifel?t=M6A5q4VnweP3XFjpJmxOsg&s=09"><i class="fa-brands fa-twitter"></i></a>
                            </li>
                            <li>
-                              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                              <a href="https://www.facebook.com/raifel.ts?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
                            </li>
                            <li>
-                              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                              <a href="https://www.linkedin.com/in/raifel-ts-1ab869214"><i class="fa-brands fa-linkedin-in"></i></a>
                            </li>
                            <li>
-                              <a href="#"><i class="fa-brands fa-github"></i></a>
+                              <a href="https://github.com/raifelts"><i class="fa-brands fa-github"></i></a>
                            </li>
                            <li>
-                              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                              <a href="https://www.instagram.com/raifel?igsh=MXc3ZXBjODY3cm9naw=="><i class="fa-brands fa-instagram"></i></a>
                            </li>
                         </ul>
                      </div>
