--- a/index.html
+++ b/index.html
@@ -76,63 +76,18 @@
                      <li><a href="mailto:raifelts@gmail.com">raifelts@gmail.com</a></li>
                   </ul>
                </div>
-               <div class="header-menu" id="headerMenu">
+            <div class="header-menu" id="headerMenu">
                   <nav>
                      <ul>
-                        <li class="has-dropdown current-menu-ancestor">
-                           <a class="current-menu-item" href="index.html">Home</a>
-                           <ul class="sub-menu">
-                              <li class="has-dropdown current-menu-ancestor">
-                                 <a href="index.html">Dark Mode</a>
-                                 <ul class="sub-menu">
-                                    <li class="current-menu-item">
-                                       <a href="index.html">Home One</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-2.html">Home Two</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3.html">Home Three</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-4.html">Home Four</a>
-                                    </li>
-                                 </ul>
-                              </li>
-                              <li class="has-dropdown">
-                                 <a href="index-light.html">Light Mode</a>
-                                 <ul class="sub-menu">
-                                    <li>
-                                       <a href="index-light.html">Home One</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-2-light.html">Home Two</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3-light.html">Home Three</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-4-light.html">Home Four</a>
-                                    </li>
-                                 </ul>
-                              </li>
-                           </ul>
+                        <li>
+                           <a class="current-menu-item" href="#content">Home</a>
                         </li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolios</a></li>
-                        <li class="has-dropdown">
-                           <a href="blog.html">Blog</a>
-                           <ul class="sub-menu">
-                              <li>
-                                 <a href="blog.html">Blog</a>
-                              </li>
-                              <li>
-                                 <a href="blog-details.html">Blog Details</a>
-                              </li>
-                           </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#services-section">Services</a></li>
+                        <li><a href="#works-section">Works</a></li>
+                        <li><a href="#resume-section">Resume</a></li>
+                        <li><a href="#skills-section">Skills</a></li>
+                        <li><a href="#testimonials-section">Testimonials</a></li>
+                        <li><a href="#contact-section">Contact</a></li>
                      </ul>
                   </nav>
                </div>
@@ -169,60 +124,15 @@
                <div class="header-menu">
                   <nav>
                      <ul>
-                        <li class="has-dropdown current-menu-ancestor">
-                           <a class="current-menu-item" href="index.html">Home</a>
-                           <ul class="sub-menu">
-                              <li class="has-dropdown current-menu-ancestor">
-                                 <a href="index.html">Dark Mode</a>
-                                 <ul class="sub-menu">
-                                    <li class="current-menu-item">
-                                       <a href="index.html">Home One</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-2.html.">Home Two</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3.html">Home Three</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3.html">Home Four</a>
-                                    </li>
-                                 </ul>
-                              </li>
-                              <li class="has-dropdown">
-                                 <a href="index-light.html">Light Mode</a>
-                                 <ul class="sub-menu">
-                                    <li>
-                                       <a href="index-light.html">Home One</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-2-light.html">Home Two</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3-light.html">Home Three</a>
-                                    </li>
-                                    <li>
-                                       <a href="index-3-light.html">Home Four</a>
-                                    </li>
-                                 </ul>
-                              </li>
-                           </ul>
+                        <li>
+                           <a class="current-menu-item" href="#content">Home</a>
                         </li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolios</a></li>
-                        <li class="has-dropdown">
-                           <a href="blog.html">Blog</a>
-                           <ul class="sub-menu">
-                              <li>
-                                 <a href="blog.html">Blog</a>
-                              </li>
-                              <li>
-                                 <a href="blog-details.html">Blog Details</a>
-                              </li>
-                           </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#services-section">Services</a></li>
+                        <li><a href="#works-section">Works</a></li>
+                        <li><a href="#resume-section">Resume</a></li>
+                        <li><a href="#skills-section">Skills</a></li>
+                        <li><a href="#testimonials-section">Testimonials</a></li>
+                        <li><a href="#contact-section">Contact</a></li>
                      </ul>
                   </nav>
                </div>
@@ -1114,85 +1024,7 @@
          </div>
       </section>
       <!-- TESTIMONIAL SECTION END -->
-
-      <!-- BLOG SECTION STAR -->
-      <section class="blog-section" id="blog-section">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="section-header text-center">
-                     <h2 class="section-title wow fadeInUp" data-wow-delay=".3s">Recent Blogs</h2>
-                     <p class="wow fadeInUp" data-wow-delay=".4s">
-                        We put your ideas and thus your wishes in the form of a unique web project that inspires you and
-                        you customers.
-                     </p>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-4 col-md-6">
-                  <div class="blog-item wow fadeInUp" data-wow-delay=".5s">
-                     <div class="blog-thumb">
-                        <a href="blog-details.html">
-                           <img src="assets/img/blog/1.jpg" alt="">
-                        </a>
-                        <a href="#" class="category">Tutorial</a>
-                     </div>
-
-                     <div class="blog-content">
-                        <div class="blog-meta">
-                           <ul class="ul-reset">
-                              <li><i class="fa-light fa-calendar-days"></i> Oct 01, 2022</li>
-                              <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
-                           </ul>
-                        </div>
-                        <h3 class="blog-title"><a href="blog-details.html">top 10 ui ux designers</a></h3>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                  <div class="blog-item wow fadeInUp" data-wow-delay=".6s">
-                     <div class="blog-thumb">
-                        <a href="blog-details.html">
-                           <img src="assets/img/blog/2.jpg" alt="">
-                        </a>
-                        <a href="#" class="category">TIPS</a>
-                     </div>
-                     <div class="blog-content">
-                        <div class="blog-meta">
-                           <ul class="ul-reset">
-                              <li><i class="fa-light fa-calendar-days"></i> Nov 01, 2022</li>
-                              <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
-                           </ul>
-                        </div>
-                        <h3 class="blog-title"><a href="blog-details.html">App Development Guides</a></h3>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                  <div class="blog-item wow fadeInUp" data-wow-delay=".7s">
-                     <div class="blog-thumb">
-                        <a href="blog-details.html">
-                           <img src="assets/img/blog/3.jpg" alt="">
-                        </a>
-                        <a href="#" class="category">FREEBIES</a>
-                     </div>
-                     <div class="blog-content">
-                        <div class="blog-meta">
-                           <ul class="ul-reset">
-                              <li><i class="fa-light fa-calendar-days"></i> Dec 01, 2022</li>
-                              <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
-                           </ul>
-                        </div>
-                        <h3 class="blog-title"><a href="blog-details.html">learn graphic design free</a></h3>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-      <!-- BLOG SECTION END -->
-
+      
       <!-- CONTACT SECTION START -->
       <section class="contact-section" id="contact-section">
          <div class="container">
